--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - devtools/travis-ci/miniconda.sh
 install:
   # Install Pychimera
-  - conda install -c insilichem pychimera
+  - $HOME/miniconda/bin/conda install -c insilichem pychimera
   # Install package
   - pip install -i https://test.pypi.org/simple/ compare-equal
 script:
