--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_install:
   - devtools/travis-ci/miniconda.sh
 install:
   # Install Pychimera
+  - source $HOME/miniconda/etc/profile.d/conda.sh
+  - conda activate
   - $HOME/miniconda/bin/conda config --set always_yes yes
   - $HOME/miniconda/bin/conda install -c insilichem pychimera
   # Install package
