--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - conda activate
   - $HOME/miniconda/bin/conda config --set always_yes yes
   - $HOME/miniconda/bin/conda install -c insilichem pychimera
+  - whereis pychimera
   # Install package
   - pip install -i https://test.pypi.org/simple/ compare-equal
 script:
