--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - conda activate
   - $HOME/miniconda/bin/conda config --set always_yes yes
   - $HOME/miniconda/bin/conda install -c insilichem pychimera
-  - export CHIMERADIR="$HOME/chimera"
+  #  - export CHIMERADIR="$HOME/chimera"
   - conda install -q -n base conda conda-build
   # Install package
   - pip install -i https://test.pypi.org/simple/ compare-equal
