travis: added conda activate (checking)

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - conda activate
   # Install Pychimera
   - conda create -n pychimera -c insilichem python=2.7 pychimera
-  - source activate pychimera
+  - conda activate pychimera
   - export CHIMERADIR="$HOME/chimera"
   # Install package
   - pip install -i https://test.pypi.org/simple/ compare-equal
