--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ install:
   - conda config --add channels insilichem
   - conda activate
   # Install Pychimera
-  - conda create -n pychimera -c insilichem python=2.7 pychimera
-  - conda activate pychimera
+  - conda install -c insilichem pychimera
+  - PYTHONPATH=$HOME/miniconda/lib/python2.7/site-packages/ /usr/local/bin/python
   - export CHIMERADIR="$HOME/chimera"
   # Install package
   - pip install -i https://test.pypi.org/simple/ compare-equal
