travis: PYTHONPATH#2 (checking)

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - conda activate
   # Install Pychimera
   - conda install -c insilichem pychimera
-  - PYTHONPATH=$HOME/miniconda/lib/python2.7/site-packages/ /usr/local/bin/python
+  - PYTHONPATH=$HOME/miniconda/lib/python2.7/site-packages/
   - export CHIMERADIR="$HOME/chimera"
   # Install package
   - pip install -i https://test.pypi.org/simple/ compare-equal
