--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - conda config --add channels defaults
   - conda config --add channels insilichem
   - conda activate
-  # Install Pychimera
+  # Install Pychimera and Pytest
   - conda install -c insilichem pychimera pytest
   - export CHIMERADIR="$HOME/chimera"
   # Install package
@@ -26,4 +26,4 @@ install:
 script:
   # Check package
   - cd tests
-  - pytest -s
+  - python run_test.py
